# groundflight

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TESTING.md  architecture.md  flake.nix  groundflight-spec.md
cmake/: arm-none-eabi.cmake
lib/stubs/: stm32f7xx.h
linker/: STM32F722RETx_FLASH.ld
src/: main.c  stm32f7xx_hal_conf.h
src/config/: cli.c  cli.h  config.c  config.h  eeprom.c  eeprom.h
src/drivers/: crsf.c  crsf.h  esc.c  esc.h  esc_none.c  esc_none.h  esc_srxl2.c  esc_srxl2.h  esc_telem.c  esc_telem.h  icm42688.c  icm42688.h  msp.c  msp.h  pwm.c  pwm.h  spi.c  spi.h  srxl2.c  srxl2.h  uart.c  uart.h
src/flight/: gyro.c  gyro.h  mixer.c  mixer.h  osd.c  osd.h  speed.c  speed.h  stabilizer.c  stabilizer.h
src/usb/: usb_cdc.c  usb_cdc.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
startup/: startup_stm32f722xx.s
test/: CMakeLists.txt
test/integration/: test_failsafe.c  test_signal_chain.c
test/mocks/: mock_eeprom.c  mock_eeprom.h  mock_hal.h  mock_pwm.c  mock_pwm.h  mock_uart.c  mock_uart.h
test/unit/: test_config.c  test_crsf.c  test_gyro.c  test_mixer.c  test_msp.c  test_speed.c  test_stabilizer.c
